--- a/public/error.html
+++ b/public/error.html
@@ -19,7 +19,7 @@
     <img src="./logo.png" alt="">
   </div>
   <div class="message">
-    Une erreur est survenue lors de la phase d'authentification
+    Une erreur est survenue
 
     <a href="/">Cliquer ici pour recharger l'application</a>
   </div>
