--- a/public/error.html
+++ b/public/error.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="icon" href="img/icons/favicon.ico">
   <link rel="shortcut icon" type="image/x-icon" href="img/icons/favicon.ico">
-  <title>Pilot'Auchan</title>
+  <title>Decathlon</title>
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700" rel="stylesheet">
 </head>
 
 <body>
-  <h2>Pilot'Auchan</h2>
+  <h2>Decathlon</h2>
   <div class="logo">
     <img src="./logo.png" alt="">
   </div>
