--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,6 @@
       <strong>We're sorry but player for decathlon doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
   </body>
 </html>
